// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonItem renders correctly when disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEEDE5",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "opacity": 0.5,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
      "width": "100%",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    EUR
  </Text>
  <test-file-stub
    fill="#9F8C82"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</View>
`;

exports[`RadioButtonItem renders correctly when display is not a string 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEEDE5",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          undefined,
          false,
        ]
      }
    >
      GBP
    </Text>
  </View>
  <test-file-stub
    fill="#9F8C82"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</View>
`;

exports[`RadioButtonItem renders correctly when not selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEEDE5",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
      "width": "100%",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    EUR
  </Text>
  <test-file-stub
    fill="#9F8C82"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</View>
`;

exports[`RadioButtonItem renders correctly when selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEEDE5",
      "borderColor": "#F56522",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
      "width": "100%",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    EUR
  </Text>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</View>
`;

exports[`RadioButtonItem renders correctly with styles 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FEEDE5",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 2,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "width": "100%",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    EUR
  </Text>
  <test-file-stub
    fill="#9F8C82"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 20,
          "width": 20,
        },
      ]
    }
  />
</View>
`;

exports[`RadioButtonItem renders correctly with styles 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -28,21 +28,21 @@
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FEEDE5",
-       "borderColor": "#F56522",
+       "borderColor": "transparent",
        "borderRadius": 12,
        "borderWidth": 2,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
        "opacity": 1,
-       "paddingBottom": 32,
-       "paddingLeft": 32,
-       "paddingRight": 32,
-       "paddingTop": 32,
+       "paddingBottom": 16,
+       "paddingLeft": 16,
+       "paddingRight": 16,
+       "paddingTop": 16,
        "width": "100%",
      }
    }
  >
    <Text
@@ -70,11 +70,11 @@
      }
    >
      EUR
    </Text>
    <test-file-stub
-     fill="#888"
+     fill="#9F8C82"
      style={
        Array [
          Object {
            "height": 24,
            "width": 24,"
`;
